# snowex_db

./: .gitignore  .readthedocs.yaml  README.rst  project.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml  pytest.yml  qaqc.yml
docs/: Makefile  RDS_db_connection.rst  _config.yml  _toc.yml  authors.rst  conf.py  contributing.rst  data_notes.rst  database_structure.rst  documentation_development.rst  index.rst  installation.rst  requirements.txt  usage.rst
scripts/download/: download_uavsar.py  nsidc_sources.txt
scripts/install/: modify_conf.py
scripts/remove_data/: remove_bad_utm.py  remove_pits.py
scripts/tools/: get_datasets_list.py
scripts/upload/: add_AK_lidar.py  add_QSI.py  add_UAVSAR.py  add_alaska_pits_2023.py  add_aso.py  add_bsu_gpr.py  add_csu_gpr.py  add_csu_gpr_AK.py  add_gm_snow_off.py  add_gpr.py  add_gpr_csu_AK.py  add_gpr_unm.py  add_iop_pits.py  add_met_timeseries.py  add_pits_bulk_properties.py  add_sbb_depths.py  add_site_details.py  add_smp.py  add_snow_classification.py  add_snow_depths.py  add_snow_poles.py  add_ssa.py  add_time_series_pits.py  add_time_series_pits_2020.py  add_time_series_pits_2021.py  add_timeseries_pits_bulk_properties.py  add_unm_gpr.py  convert_uavsar.py  create.py  db_init.py  earthaccess_data.py  import_logger.py  resample_smp.py  run.py  test_operational_db.py  upload_time_series_pits.py
snowex_db/: __init__.py  batch.py  cli.py  conversions.py  data.py  interpretation.py  layers.yaml  metadata.py  metadata_variable_overrides.yaml  point_data.py  point_metadata.py  point_primary_variable_overrides.yaml  profile_data.py  profile_primary_variable_overrides.yaml  projection.py  string_management.py  upload.py  utilities.py
snowex_db/upload/: base.py  batch.py  cog_handler.py  layers.py  points.py  raster_mapping.py  rasters.py
tests/: __init__.py  conftest.py  db_setup.py  helpers.py  sql_test_base.py  test_analysis.py  test_batch.py  test_conversions.py  test_db.py  test_functions.py  test_interpretation.py  test_layers.py  test_metadata.py  test_points.py  test_projection.py  test_rasters.py  test_string_management.py  test_utilities.py
tests/data/: S06M0874_2N12_20200131.CSV  S19M1013_5S21_20200201.CSV  SnowEx23_SnowPits_AKIOP_454SB_20230316_density_v01.csv  bsu_gpr.csv  csu_ak_gpr.csv  csu_gpr.csv  density.csv  empty_data.csv  hard_header.csv  perimeters.csv  pit_summary_points.csv  site_details.csv  site_details_2020.csv  site_details_2021.csv  stratigraphy.csv  unm_gpr.csv
tests/layers/: test_batch.py  test_density_profile.py  test_layer_batch.py  test_lwc_profile.py  test_nondata_file.py  test_smp_profile.py  test_ssa_profile.py  test_stratigraphy_profile.py  test_temperature_profile.py
tests/points/: _base.py  test_alaska_density.py  test_depth.py  test_gpr.py  test_gpr_bsu.py  test_gpr_csu.py  test_gpr_csu_ak.py  test_gpr_unm.py  test_perimiter_depth.py  test_pole_depth.py  test_poll_depth.py  test_summary_pits.py
tests/rasters/: test_batch.py  test_conversions.py  test_raster_batch.py  test_raster_upload.py  test_rasters.py
