[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snowex_db"
dynamic = ["version"]
description = "SQL Database software for SnowEx data"
keywords = ["snowexdb", "snowexsql", "sql", "database", "snow"]
readme = "README.rst"

# Bumped minimum Python version to 3.10 due to union operator syntax (|) in type hints
# See snowex_db/point_metadata.py:66 - Union[ProfileMetaData | None] requires Python 3.10+

requires-python = ">=3.10"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10', # same as requires-python
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "snowexsql @ git+https://github.com/SnowEx/snowexsql.git@release-0.6.x",
    "snowmicropyn",
    "insitupy~=0.4",
    "boto3<1.24",
    "rasterio<1.4",
    "timezonefinder<7",
    "metloom==0.6.1",
    "coloredlogs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-factoryboy",
    "pytest-mock",
    "moto<3.2",
]
uploader = [
    "progressbar2",
]
all = ["snowexdb[dev,uploader]"]

[project.scripts]
clear_dataset = "snowex_db.cli:clear_dataset"

# TODO - Issue #36
#[project.license]
#file = "LICENSE"

[project.urls]
Homepage = "https://github.com/SnowEx/snowex_db"
Repository = "https://github.com/SnowEx/snowex_db.git"
Issues = "https://github.com/SnowEx/snowex_db/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "snowex_db/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]
