[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snowex_db"
dynamic = ["version"]
description = "SQL Database software for SnowEx data"
keywords = ["snowexdb", "snowexsql", "sql", "database", "snow"]
readme = "README.rst"


requires-python = ">=3.10"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    # Strict boto ecosystem pins due to aiobotocore compatibility
    # Check quarterly for updates: https://github.com/aio-libs/aiobotocore/releases
    # Last updated: 2024-Q1
    "aiobotocore>=2.11.0,<2.12.0",
    "botocore>=1.33.2,<1.34.23",
    "boto3>=1.33.2,<1.34.23",
    "s3fs>=2024.2.0",
    "coloredlogs",
    "earthaccess",
    "insitupy",
    "metloom",
    "rasterio",
    "snowexsql @ git+https://github.com/SnowEx/snowexsql.git@master",
    "timezonefinder",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=4",
]
uploader = [
    "progressbar2",
]
docs = [
    "ipython>=8.0,<9.0",
    "nbconvert>=7.0,<8.0",
    "nbsphinx>=0.9",
    "plotly>=5.0",
    "sphinx-gallery>=0.9",
    "sphinx>=7.1,<8.0",
    "sphinxcontrib-apidoc>=0.3",
    "jupyter-book>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "sphinx-autobuild>=2024.4",
    "sphinxcontrib-mermaid>=0.9,<1.0",
]

all = ["snowex_db[dev,uploader,docs]"]

[project.scripts]
clear_dataset = "snowex_db.cli:clear_dataset"

# TODO - Issue #36
#[project.license]
#file = "LICENSE"

[project.urls]
Homepage = "https://github.com/SnowEx/snowex_db"
Repository = "https://github.com/SnowEx/snowex_db.git"
Issues = "https://github.com/SnowEx/snowex_db/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "snowex_db/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]
